# rust_py_play

./: Cargo.toml  README.md  pyproject.toml
python/: py_play_demo.py
src/: lib.rs
